@@ -31,7 +31,7 @@
 
 #define FIRMWARE_VERSION_MAJOR 2
 #define FIRMWARE_VERSION_MINOR 1
-#define FIRMWARE_VERSION_REVISION 4
+#define FIRMWARE_VERSION_REVISION 5
 
 #define SPI_FIFO_COOP_ENABLE
 
